--- a/services/Protein_API/metadata.yml
+++ b/services/Protein_API/metadata.yml
@@ -4,8 +4,8 @@
 name: protein_api
 version: 0.1
 type: query
-icon: 
-main_module: protein.py
+icon:
+main_module: services.Protein_API.protein.py
 url: https://apps.araport.org/sandbox-thalemine/begin.do
 description: 'An API that returns basic information about a protein given search parameters'
 endpoints:
