--- a/services/Protein_API/metadata.yml
+++ b/services/Protein_API/metadata.yml
@@ -6,10 +6,10 @@ version: 0.1
 type: query
 main_module: services.Protein_API.protein.py
 url: https://apps.araport.org/sandbox-thalemine/begin.do
-description: 'An API that returns basic information about a protein given search parameters'
+description: "An API that returns basic information about a protein given search parameters"
 endpoints:
   /search:
-    description: 'In Development'
+    description: "In Development"
     parameters:
       - name: Identifiers
         description: "Search for a protein based on an identifier. Having no identifiers lists all protein identfiers from the Start number to the End number. Multiple identifiers must be separated by a comma."
