--- a/services/Protein_API/metadata.yml
+++ b/services/Protein_API/metadata.yml
@@ -67,3 +67,5 @@ authors:
     email: jkuo@jcvi.org
     sponsor_organization: JCVI
     sponsor_uri: http://www.jcvi.org/
+whitelist:
+  - https://apps.araport.org/thalemine/begin.do
