--- a/services/Protein_API/metadata.yml
+++ b/services/Protein_API/metadata.yml
@@ -68,4 +68,4 @@ authors:
     sponsor_organization: JCVI
     sponsor_uri: http://www.jcvi.org/
 whitelist:
-  - apps.araport.org/thalemine
+  - apps.araport.org
