adding even more information fields

--- a/services/Protein_API/metadata.yml
+++ b/services/Protein_API/metadata.yml
@@ -25,22 +25,41 @@ endpoints:
           - "secondaryIdentifier"
           - "name"
           - "uniprotName"
-          - "crossReferences.source.dataSets.description"
+          - "isFragment"
           - "length"
           - "ecNumber"
-          - "id"
-          - "isFragment"
-          - "isUniprotCanonical"
           - "md5checksum"
+          - "id"
+          - "isUniprotCanonical"
           - "molecularWeight"
           - "primaryAccession"
           - "symbol"
           - "uniprotAccession"
+          - "comments.description"
+          - "comments.type"
+          - "crossReferences.source.description"
+          - "crossReferences.source.name"
+          - "crossReferences.source.url"
+          - "organism.commonName"
+          - "organism.name"
+          - "organism.genus"
+          - "organism.species"
+          - "organism.shortName"
+          - "organism.taxonId"
+          - "sequence.length"
+          - "sequence.md5checksum"
+          - "sequence.residues"
+          - "dataSets.description"
+          - "dataSets.name"
+          - "dataSets.url"
+          - "dataSets.version"
+          - "features.begin"
+          - "features.description"
+          - "features.end"
+          - "features.type"
           - "crossReferences.identifier"
           - "genes.primaryIdentifier"
           - "synonyms.value"
-          - "crossReferences.source.dataSets.bioEntities.organism.name"
-          - "crossReferences.source.dataSets.bioEntities.locations.strand"
       - name: Begin
         description: "Display results starting from this number until the End"
         type: string
