--- a/services/Protein_API/metadata.yml
+++ b/services/Protein_API/metadata.yml
@@ -25,41 +25,22 @@ endpoints:
           - "secondaryIdentifier"
           - "name"
           - "uniprotName"
-          - "isFragment"
+          - "crossReferences.source.dataSets.description"
           - "length"
           - "ecNumber"
-          - "md5checksum"
           - "id"
+          - "isFragment"
           - "isUniprotCanonical"
+          - "md5checksum"
           - "molecularWeight"
           - "primaryAccession"
           - "symbol"
           - "uniprotAccession"
-          - "comments.description"
-          - "comments.type"
-          - "crossReferences.source.description"
-          - "crossReferences.source.name"
-          - "crossReferences.source.url"
-          - "organism.commonName"
-          - "organism.name"
-          - "organism.genus"
-          - "organism.species"
-          - "organism.shortName"
-          - "organism.taxonId"
-          - "sequence.length"
-          - "sequence.md5checksum"
-          - "sequence.residues"
-          - "dataSets.description"
-          - "dataSets.name"
-          - "dataSets.url"
-          - "dataSets.version"
-          - "features.begin"
-          - "features.description"
-          - "features.end"
-          - "features.type"
           - "crossReferences.identifier"
           - "genes.primaryIdentifier"
           - "synonyms.value"
+          - "crossReferences.source.dataSets.bioEntities.organism.name"
+          - "crossReferences.source.dataSets.bioEntities.locations.strand"
       - name: Begin
         description: "Display results starting from this number until the End"
         type: string
@@ -86,5 +67,3 @@ authors:
     email: jkuo@jcvi.org
     sponsor_organization: JCVI
     sponsor_uri: http://www.jcvi.org/
-whitelist:
-  - apps.araport.org
