give up on anything other than default values

--- a/services/Protein_API/metadata.yml
+++ b/services/Protein_API/metadata.yml
@@ -25,7 +25,6 @@ endpoints:
           - "secondaryIdentifier"
           - "name"
           - "uniprotName"
-          - "crossReferences.source.dataSets.description"
           - "length"
           - "ecNumber"
           - "id"
@@ -36,11 +35,27 @@ endpoints:
           - "primaryAccession"
           - "symbol"
           - "uniprotAccession"
-          - "crossReferences.identifier"
-          - "genes.primaryIdentifier"
-          - "synonyms.value"
-          - "crossReferences.source.dataSets.bioEntities.organism.name"
-          - "crossReferences.source.dataSets.bioEntities.locations.strand"
+
+#          - "primaryIdentifier"
+#          - "secondaryIdentifier"
+#          - "name"
+#          - "uniprotName"
+#          - "crossReferences.source.dataSets.description"
+#          - "length"
+#          - "ecNumber"
+#          - "id"
+#          - "isFragment"
+#          - "isUniprotCanonical"
+#          - "md5checksum"
+#          - "molecularWeight"
+#          - "primaryAccession"
+#          - "symbol"
+#          - "uniprotAccession"
+#          - "crossReferences.identifier"
+#          - "genes.primaryIdentifier"
+#          - "synonyms.value"
+#          - "crossReferences.source.dataSets.bioEntities.organism.name"
+#          - "crossReferences.source.dataSets.bioEntities.locations.strand"
       - name: Begin
         description: "Display results starting from this number until the End"
         type: string
