--- a/services/Protein_API/metadata.yml
+++ b/services/Protein_API/metadata.yml
@@ -11,16 +11,17 @@ endpoints:
   /search:
     description: "Finds and returns information about a protein given its identifier"
     parameters:
-      - name: Identifiers
-        description: "Search for a protein based on an identifier. Having no identifiers lists all protein identfiers from the Start number to the End number. Multiple identifiers must be separated by a comma."
+      - name: Identifier
+        description: "Search for a protein based on an identifier. Having no identifiers lists all protein identifiers."
         type: string
         required: false
-      - name: Information
-        description: "Information to output"
+      - name: Output
+        description: "Information to display"
         type: string
         required: true
-        default: primaryIdentifier
+        default: all
         enum:
+          - "all"
           - "primaryIdentifier"
           - "secondaryIdentifier"
           - "name"
@@ -56,14 +57,15 @@ endpoints:
 #          - "synonyms.value"
 #          - "crossReferences.source.dataSets.bioEntities.organism.name"
 #          - "crossReferences.source.dataSets.bioEntities.locations.strand"
-      - name: Begin
-        description: "Display results starting from this number until the End"
-        type: string
-        required: false
-      - name: End
-        description: "Display results starting from Begin until this number"
-        type: string
-        required: false
+
+#      - name: Begin
+#        description: "Display results starting from this number until the End"
+#        type: string
+#        required: false
+#      - name: End
+#        description: "Display results starting from Begin until this number"
+#        type: string
+#        required: false
   /list:
     description: "Lists identifiers of proteins"
     parameters:
