changing Identifier field to use the AT identifiers (mRNA)

--- a/services/Protein_API/metadata.yml
+++ b/services/Protein_API/metadata.yml
@@ -24,6 +24,7 @@ endpoints:
           - "all"
           - "primaryIdentifier"
           - "secondaryIdentifier"
+          - "mRNA.primaryIdentifier"
           - "name"
           - "uniprotName"
           - "length"
