--- a/services/Protein_API/metadata.yml
+++ b/services/Protein_API/metadata.yml
@@ -4,7 +4,7 @@
 name: protein_api
 version: 0.1
 type: query
-main_module: services.Protein_API.protein.py
+main_module: services.Protein_API.main.py #location of main module
 url: https://apps.araport.org/thalemine/begin.do
 description: "An API that returns basic information about proteins given search parameters"
 endpoints:
