--- a/services/Protein_API/metadata.yml
+++ b/services/Protein_API/metadata.yml
@@ -7,6 +7,9 @@ type: query
 main_module: services.Protein_API.main.py #location of main module
 url: https://apps.araport.org/thalemine/begin.do
 description: "An API that returns basic information about proteins given search parameters"
+tags:
+  - proteins
+  - Thalemine
 endpoints:
   /search:
     description: "Finds and returns information about a protein given its identifier"
