--- a/services/Protein_API/metadata.yml
+++ b/services/Protein_API/metadata.yml
@@ -1,13 +1,13 @@
 # file: metadata.yml
 
 ---
-name: protein_api
+name: Protein_API
 version: 0.1
 type: query
 icon: araport_circle.png
 main_module: services.Protein_API.main.py #location of main module
 url: https://apps.araport.org/thalemine/begin.do
-description: "An API that returns basic information about proteins given search parameters"
+description: "A web service that retrieves specific information about a protein given the primary identifier of its mRNA (e.g. AT4G09000.1)"
 tags:
   - proteins
   - Thalemine
@@ -84,8 +84,34 @@ endpoints:
 #        required: false
 requirements:
   - intermine
+sources:
+  - title: ThaleMine
+    description: "A database containing Arabidopsis Thaliana data. It can be searched or queried for these lists."
+    sponsor_organization_name: Araport
+    sponsor_uri: https://www.araport.org/
+    provider_name: National Science Foundation
+    provider_email: http://www.nsf.gov/
+    provider_name: Biotechnology and Biological Sciences Research Council
+    provider_email: http://www.bbsrc.ac.uk/
+    uri: https://apps.araport.org/thalemine/begin.do
+    sources:
+      - title: UniProt
+        description: "A searchable database containing data about proteins."
+        sponsor_organization_name: European Bioinformatics Institute
+        sponsor_uri: http://www.ebi.ac.uk/
+        sponsor_organization_name: Swiss Institute of Bioinformatics
+        sponsor_uri: http://www.isb-sib.ch/
+        sponsor_organization_name: Protein Information Resource
+        sponsor_uri: http://pir.georgetown.edu/
+        provider_name: National Institutes of Health
+        provider_email: http://www.nih.gov/
+        uri: http://www.uniprot.org/
 authors:
   - name: Jason Kuo
     email: jkuo@jcvi.org
-    sponsor_organization: JCVI
+    sponsor_organization: J. Craig Venter Institute
+    sponsor_uri: http://www.jcvi.org/
+  - name: Jason Miller
+    email: jmiller@jcvi.org
+    sponsor_organization: J. Craig Venter Institute
     sponsor_uri: http://www.jcvi.org/
