--- a/services/Protein_API/metadata.yml
+++ b/services/Protein_API/metadata.yml
@@ -87,24 +87,23 @@ requirements:
 sources:
   - title: ThaleMine
     description: "A database containing Arabidopsis Thaliana data. It can be searched or queried for these lists."
-    sponsor_organization_name: Araport
-    sponsor_uri: https://www.araport.org/
-    provider_name: National Science Foundation
-    provider_email: http://www.nsf.gov/
-    provider_name: Biotechnology and Biological Sciences Research Council
-    provider_email: http://www.bbsrc.ac.uk/
+    sponsor_organization_name:
+      - National Science Foundation
+      - Biotechnology and Biological Sciences Research Council
+    sponsor_uri:
+      - http://www.nsf.gov/
+      - http://www.bbsrc.ac.uk/
+    provider_name: Araport
     uri: https://apps.araport.org/thalemine/begin.do
     sources:
       - title: UniProt
         description: "A searchable database containing data about proteins."
-        sponsor_organization_name: European Bioinformatics Institute
-        sponsor_uri: http://www.ebi.ac.uk/
-        sponsor_organization_name: Swiss Institute of Bioinformatics
-        sponsor_uri: http://www.isb-sib.ch/
-        sponsor_organization_name: Protein Information Resource
-        sponsor_uri: http://pir.georgetown.edu/
-        provider_name: National Institutes of Health
-        provider_email: http://www.nih.gov/
+        provider_name:
+          - European Bioinformatics Institute
+          - Swiss Institute of Bioinformatics
+          - Protein Information Resource
+        sponsor_organization_name: National Institutes of Health
+        sponsor_uri: http://www.nih.gov/
         uri: http://www.uniprot.org/
 authors:
   - name: Jason Kuo
