--- a/services/Protein_API/metadata.yml
+++ b/services/Protein_API/metadata.yml
@@ -14,7 +14,7 @@ tags:
   - Thalemine
 endpoints:
   /search:
-    description: "Returns information about a single protein given its mRNA identifier. The format of the output depends on the output parameter. It can show all available information about the protein or only a single one. Warning: some proteins have isoforms (e.g. AT1G01070.1). In this case, each isoform is represented as an object in the result array."
+    description: "Returns information about a single protein given its mRNA identifier. The format of the output depends on the output parameter. It can show all available information about the protein or only a single piece of information. Warning: some proteins have isoforms (e.g. AT1G01070.1). In this case, each isoform is represented as an object in the result array."
     parameters:
       - name: Identifier
         description: "Search for a protein based on an identifier."
@@ -43,7 +43,7 @@ endpoints:
           - "symbol"
           - "uniprotAccession"
   /list:
-    description: "Returns a JSON listing the mRNA identifiers for all available proteins. These identifiers can then be used in the search endpoint to retrieve more information about the protein."
+    description: "Returns an array of objects representing proteins and each object contains the mRNA identifier and the name of the protein. These identifiers can then be used in the search endpoint to retrieve more information about the protein."
 requirements:
   - intermine
 sources:
