--- a/services/Protein_API/metadata.yml
+++ b/services/Protein_API/metadata.yml
@@ -43,7 +43,7 @@ endpoints:
           - "symbol"
           - "uniprotAccession"
   /list:
-    description: "Returns an array of objects representing proteins and each object contains the mRNA identifier and the name of the protein. These identifiers can then be used in the search endpoint to retrieve more information about the protein."
+    description: "Returns an array of objects representing proteins and each object contains the mRNA identifier and the name of the protein. These identifiers can then be used in the search endpoint to retrieve more information about the protein. Warning: there are a lot of proteins so this can be very slow (maybe up to a minute)"
 requirements:
   - intermine
 sources:
