--- a/services/publications_by_protein_identifier/metadata.yml
+++ b/services/publications_by_protein_identifier/metadata.yml
@@ -1,8 +1,8 @@
 ---
 
 name: publications_by_protein_identifier
-description: Given a protein identifier and source return publications from ThaleMine.
-version: 0.1
+description: Given a protein identifier return publications from ThaleMine.
+version: 0.2
 tags:
     - arabidopsis
     - protein
@@ -28,21 +28,13 @@ requirements:
 
 endpoints:
     /search:
-        description: Return publications from ThaleMine given a specific protein identifier and source.
+        description: Return publications from ThaleMine given a specific protein identifier.
         parameters:
             - name: identifier
               description: Protein identifier
               type: string
               required: true
               default: FT_ARATH
-            - name: source
-              description: Data source
-              type: string
-              required: true
-              default: UniProt
-              enum:
-                - 'Araport'
-                - 'UniProt'
 
     /list:
         description: Return a list of valid protein indentifiers given a source
